--- a/views/survey.handlebars
+++ b/views/survey.handlebars
@@ -30,12 +30,7 @@
 
 	<button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>Submit</button>
 
-	<hr>
-	<footer class="footer">
-		<div class="container">
-			<p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/soleman16/FriendFinder">GitHub Repo</a></p>
-		</div>
-	</footer>
+	{{>footer}}
 </div>
 
 <!-- Modal -->
