added a picture to the home screen

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,6 @@
 <hr>
 <footer class="footer">
     <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/soleman16/FriendFinder">GitHub
-                Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/soleman16/FriendFinder">GitHub Repo</a></p>
     </div>
 </footer>
