--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,8 @@
 <div class="container">
 
     <div class="jumbotron">
-        <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
+        <img src="90210.jpg" width="640" height="480" class="mx-auto rounded d-block" />
+        <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> 90210 Friend Finder</h1>
         <hr>
         <h2>Answer a few basic questions. </h2>
         <h2>Then find the friend with the greatest compatibility!</h2>
